--- a/index.html
+++ b/index.html
@@ -5,33 +5,32 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <header>
+        <header id="header">
             <div class="container">
-                <h1 class="Name">Your Name</h1>
-                    <div class="row">
-                        <div class="col-md-6"></div>
-                        <div class="col-sm-6">
-                            <nav class="navbar navbar-expand-lg navbar-light bg-white">
-                                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-                                    <span class="navbar-toggler-icon"></span>
-                                </button>
+<!-- Reminder using h1 will not align the logo name with border-bottom -->
+                <a id="name">Your Name</a>
+                <div class="row">
+                    <div class="col-sm-5"></div>
+                        <div class="col-sm-7">
+<!-- Bootstrap; navbar-collapse -->
+                            <nav class="navbar navbar-expand-md navbar-light bg-white">
                                 <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                                     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                                         <li class="nav-item active">
                                         <li class="nav-item">
-                                            <a class="nav-link disabled" href="index.html">About Me</a>
+                                            <a class="nav-link disabled" href="index.html" style="margin-right: 20px;">About</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link disabled" href="portfolio.html">Portfolio</a>
+                                            <a class="nav-link disabled" href="portfolio.html" style="border-left: 1px solid lightgray; padding-left: 20px; margin-right: 20px;">Portfolio</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link disabled" href="contact.html">Contacts</a>
+                                            <a class="nav-link disabled" href="contact.html" style="border-left: 1px solid lightgray; padding-left: 20px;">Contacts</a>
                                         </li>
                                     </ul>
                                 </div>
                             </nav>          
                         </div>
-
+            </div>
         </header>
 
         <footer>
