--- a/index.html
+++ b/index.html
@@ -1,41 +1,75 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="style.css">
-    </head>
-    <body>
-        <header id="header">
-            <div class="container">
-<!-- Reminder using h1 will not align the logo name with border-bottom -->
-                <a id="name">Your Name</a>
-                <div class="row">
-                    <div class="col-sm-5"></div>
-                        <div class="col-sm-7">
-<!-- Bootstrap; navbar-collapse -->
-                            <nav class="navbar navbar-expand-md navbar-light bg-white">
-                                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-                                    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                                        <li class="nav-item active">
-                                        <li class="nav-item">
-                                            <a class="nav-link disabled" href="index.html" style="margin-right: 20px;">About</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link disabled" href="portfolio.html" style="border-left: 1px solid lightgray; padding-left: 20px; margin-right: 20px;">Portfolio</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link disabled" href="contact.html" style="border-left: 1px solid lightgray; padding-left: 20px;">Contacts</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </nav>          
+
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+        crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <title>About Me</title>
+</head>
+
+<body>
+    <header id="header">
+        <div class="container">
+            <!-- Reminder using h1 will not align the logo name with border-bottom -->
+            <a id="name">Your Name</a>
+            <div class="row">
+                <div class="col-sm-5"></div>
+                <div class="col-sm-7">
+                    <!-- Bootstrap; navbar-collapse -->
+                    <nav class="navbar navbar-expand-md navbar-light bg-white">
+                        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                                <li class="nav-item active">
+                                    <li class="nav-item">
+                                        <a class="nav-link disabled" href="index.html" style="margin-right: 20px;">About</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link disabled" href="portfolio.html" style="border-left: 1px solid lightgray; padding-left: 20px; margin-right: 20px;">Portfolio</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link disabled" href="contact.html" style="border-left: 1px solid lightgray; padding-left: 20px;">Contacts</a>
+                                    </li>
+                            </ul>
                         </div>
+                    </nav>
+
+                </div>
             </div>
-        </header>
-
-        <footer>
-
-        </footer>
-    </body>
+        </div>
+    </header>
+    <br>
+    <br>
+    <br>
+    <div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="jumbotron">
+                        <h1 class="display-4">About Me</h1>
+                        <hr class="my-4">
+                        <img src="images/cat.jpg" class="cat" alt="Responsive image">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis sint autem officia cum tempore
+                            porro dolorum possimus consequatur inventore ad, nesciunt iste quam maxime eligendi, distinctio
+                            ipsa consequuntur, doloribus deleniti!</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia odit nobis, optio beatae nostrum eveniet.
+                            Quas alias officia numquam tempore! Iure voluptate hic laudantium, quia doloremque facilis eveniet
+                            totam tempora?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit eaque nihil dolorem quidem.
+                            Amet pariatur quas ab nisi a nesciunt exercitationem! Ipsam officiis magnam at dolorem excepturi
+                            necessitatibus, rerum perspiciatis.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Bootstrap navbar for footer -->
+        <nav class="nav navbar-light bg-dark">
+            <span class="navbar-text" style="color: white">
+                Copyright
+            </span>
+        </nav>
+    </div>
+</body>
 
 </html>
